Create menu, add it blur like glass
I created menu, it's rectangle, becouse i don't know how add
right padding to everyone element when everyone should has different
padding. And I created effect looks like glass or ice on menu.

--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stowarzyszenie Sądecki Elektryk</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Teko:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <nav>
         <div class="nav__cointainer">
+            <div class="background"></div>
             <input type="checkbox" name="" id="" class="dark-mode">
             <div class="menu">
                 <ul class="menu__list">
-                    <li class="menu__item"><div class="menu__icon">X</div><a href="#" class="menu__link">Opis Stowarzyszenia</a></li>
-                    <li class="menu__item"><div class="menu__icon">X</div><a href="#" class="menu__link">Zrealizowane Projekty</a></li>
-                    <li class="menu__item"><div class="menu__icon">X</div><a href="#" class="menu__link">jak Wspomóc Stowarzyszenie</a></li>
-                    <li class="menu__item"><div class="menu__icon">X</div><a href="#" class="menu__link">Panel Administratora</a></li>
+                    <li class="menu__item">
+                        <div class="menu__icon">X</div><a href="#" class="menu__link">Opis Stowarzyszenia</a>
+                    </li>
+                    <li class="menu__item">
+                        <div class="menu__icon">X</div><a href="#" class="menu__link">Zrealizowane Projekty</a>
+                    </li>
+                    <li class="menu__item">
+                        <div class="menu__icon">X</div><a href="#" class="menu__link">jak Wspomóc Stowarzyszenie</a>
+                    </li>
+                    <li class="menu__item">
+                        <div class="menu__icon">X</div><a href="#" class="menu__link">Panel Administratora</a>
+                    </li>
                 </ul>
             </div>
             <button class="hamburger">
@@ -25,6 +36,7 @@
         </div>
     </nav>
     <main class="main">
+        <div class="test"></div>
 
     </main>
 </body>
