--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
             consequat. Duis aute irure dolor in reprehenderit
             in voluptate velit esse cillum dolore eu fugiat
             nulla pariatur.</p>
-            <div class="test"></div>
+            <div class="association__ilustration"></div>
         </section>
     </main>
 </body>
