Start work with button
I finished work in main content and start projecting button.

--- a/src/index.html
+++ b/src/index.html
@@ -10,23 +10,24 @@
 </head>
 
 <body>
-    <nav>
+    <img src="./img/triangles.svg" alt="Tło strony" class="triangles">
+    <nav class="nav">
         <div class="nav__cointainer">
-            <div class="background"></div>
+            <div class="nav__background"></div>
             <input type="checkbox" name="" id="" class="dark-mode">
             <div class="menu">
                 <ul class="menu__list">
                     <li class="menu__item">
-                        <div class="menu__icon">X</div><a href="#" class="menu__link">Opis Stowarzyszenia</a>
+                        <div class="menu__icon"></div><a href="#" class="menu__link">Opis Stowarzyszenia</a>
                     </li>
                     <li class="menu__item">
-                        <div class="menu__icon">X</div><a href="#" class="menu__link">Zrealizowane Projekty</a>
+                        <div class="menu__icon"></div><a href="#" class="menu__link">Zrealizowane Projekty</a>
                     </li>
                     <li class="menu__item">
-                        <div class="menu__icon">X</div><a href="#" class="menu__link">Jak Wspomóc Stowarzyszenie</a>
+                        <div class="menu__icon"></div><a href="#" class="menu__link">Jak Wspomóc Stowarzyszenie</a>
                     </li>
                     <li class="menu__item">
-                        <div class="menu__icon">X</div><a href="#" class="menu__link">Panel Administratora</a>
+                        <div class="menu__icon"></div><a href="#" class="menu__link">Panel Administratora</a>
                     </li>
                 </ul>
             </div>
@@ -39,20 +40,28 @@
         <section class="association">
             <img src="img/logo.png" alt="Logo Stowarzyszenie Sądecki Elektryk" class="association__logo">
             <h1 class="association__title">Stowarzyszenie Sądecki Elektryk</h1>
-            <p class="association__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
-            aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
-            aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-            occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborumLorem ipsum dolor
-            sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua.
-            Ut enim ad minim veniam, quis nostrud exercitation
-            ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit
-            in voluptate velit esse cillum dolore eu fugiat
-            nulla pariatur.</p>
+            <p class="association__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna
+                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis
+                aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                Excepteur sint
+                occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Duis
+                aute irure dolor in
+                reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                cupidatat non
+                proident, sunt in culpa qui officia deserunt mollit anim id est laborumLorem ipsum dolor
+                sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua.
+                Ut enim ad minim veniam, quis nostrud exercitation
+                ullamco laboris nisi ut aliquip ex ea commodo
+                consequat. Duis aute irure dolor in reprehenderit
+                in voluptate velit esse cillum dolore eu fugiat
+                nulla pariatur.</p>
             <div class="association__ilustration"></div>
+            <div class="association__button">
+                <button class="button">Zrealizowne projekty</button>
+            </div>
         </section>
     </main>
 </body>
