--- a/src/index.html
+++ b/src/index.html
@@ -72,21 +72,160 @@
         </section>
         <section class="project-wrapper">
             <div class="project-wrapper__title">Ostatnio zrealizowane projekty</div>
-            <div class="project">
-                <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu" class="project__image"></div>
-                <div class="project__title">Tytuł</div>
-                <div class="project__date">12.03.2020</div>
-                <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
-                    laborumLorem ipsum dolor
-                    sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua.
-                    Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo
-                    consequat. Duis aute irure dolor in reprehenderit
-                    in voluptate velit esse cillum dolore eu fugiat
-                    nulla pariatur.</div>
-                <div class="project__link">Czytaj więcej o projekcie</div>
-            </>
+            <img src="./img/test3.png" alt="" class="project-wrapper__image">
+            <div class="project__wrapper">
+                <div class="project">
+                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu"
+                            class="project__image">
+                    </div>
+                    <div class="project__title">Tytuł edfvergv erv er erv</div>
+                    <div class="project__date">12.03.2020</div>
+                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborumLorem ipsum dolor
+                        sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit
+                        in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur.</div>
+                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
+                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
+                </div>
+            </div>
+            <div class="project__wrapper">
+                <div class="project">
+                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu" class="project__image">
+                    </div>
+                    <div class="project__title">Tytuł edfvergv erv er erv</div>
+                    <div class="project__date">12.03.2020</div>
+                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborumLorem ipsum dolor
+                        sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit
+                        in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur.</div>
+                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
+                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
+                </div>
+            </div>
+            <div class="project__wrapper">
+                <div class="project">
+                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu" class="project__image">
+                    </div>
+                    <div class="project__title">Tytuł edfvergv erv er erv</div>
+                    <div class="project__date">12.03.2020</div>
+                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborumLorem ipsum dolor
+                        sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit
+                        in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur.</div>
+                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
+                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
+                </div>
+            </div>
+            <div class="project__wrapper">
+                <div class="project">
+                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu" class="project__image">
+                    </div>
+                    <div class="project__title">Tytuł edfvergv erv er erv</div>
+                    <div class="project__date">12.03.2020</div>
+                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborumLorem ipsum dolor
+                        sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit
+                        in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur.</div>
+                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
+                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
+                </div>
+            </div>
+            <div class="project__wrapper">
+                <div class="project">
+                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu" class="project__image">
+                    </div>
+                    <div class="project__title">Tytuł edfvergv erv er erv</div>
+                    <div class="project__date">12.03.2020</div>
+                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborumLorem ipsum dolor
+                        sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit
+                        in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur.</div>
+                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
+                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
+                </div>
+            </div>
+            <div class="project__wrapper">
+                <div class="project">
+                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu" class="project__image">
+                    </div>
+                    <div class="project__title">Tytuł edfvergv erv er erv</div>
+                    <div class="project__date">12.03.2020</div>
+                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborumLorem ipsum dolor
+                        sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit
+                        in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur.</div>
+                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
+                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
+                </div>
+            </div>
+            <div class="project__wrapper">
+                <div class="project">
+                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu" class="project__image">
+                    </div>
+                    <div class="project__title">Tytuł edfvergv erv er erv</div>
+                    <div class="project__date">12.03.2020</div>
+                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborumLorem ipsum dolor
+                        sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit
+                        in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur.</div>
+                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
+                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
+                </div>
+            </div>
+            <div class="project__wrapper">
+                <div class="project">
+                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu" class="project__image">
+                    </div>
+                    <div class="project__title">Tytuł edfvergv erv er erv</div>
+                    <div class="project__date">12.03.2020</div>
+                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
+                        laborumLorem ipsum dolor
+                        sit amet, consectetur adipiscing elit, sed do eiusmod
+                        tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco laboris nisi ut aliquip ex ea commodo
+                        consequat. Duis aute irure dolor in reprehenderit
+                        in voluptate velit esse cillum dolore eu fugiat
+                        nulla pariatur.</div>
+                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
+                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
+                </div>
+            </div>
         </section>
     </main>
 </body>
