First end work on antek branch

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
     <main class="main">
         <section class="association">
             <div class="association__wrapper">
-                <img src="img/logo.png" alt="Logo Stowarzyszenie Sądecki Elektryk" class="association__logo">
+                <img src="img/logo.png" loading="lazy" alt="Logo Stowarzyszenie Sądecki Elektryk" class="association__logo">
                 <h1 class="association__title">Stowarzyszenie Sądecki Elektryk</h1>
                 <p class="association__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                     eiusmod
@@ -69,13 +69,13 @@
         </section>
         <section class="project-wrapper">
             <div class="project-wrapper__title">Ostatnio zrealizowane projekty</div>
-            <img src="./img/test3.png" alt="" class="project-wrapper__image">
+            <img src="./img/test1.jpg" loading="lazy" alt="" class="project-wrapper__image">
             <div class="project-wrapper__illustartions__wrapper">
                 <img src="" alt="" class="project-wrapper__illustartions">
             </div>
             <div class="project__wrapper">
                 <div class="project">
-                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu"
+                    <div class="project__imgage-wrapper"><img src="./img/test2.jpg" loading="lazy" alt="Zdjęcie z projektu"
                             class="project__image">
                     </div>
                     <div class="project__title">Tytuł edfvergv erv er erv</div>
@@ -95,7 +95,7 @@
             </div>
             <div class="project__wrapper">
                 <div class="project">
-                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu"
+                    <div class="project__imgage-wrapper"><img src="./img/test3.jpg" loading="lazy" alt="Zdjęcie z projektu"
                             class="project__image">
                     </div>
                     <div class="project__title">Tytuł edfvergv erv er erv</div>
@@ -115,7 +115,7 @@
             </div>
             <div class="project__wrapper">
                 <div class="project">
-                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu"
+                    <div class="project__imgage-wrapper"><img src="./img/test4.jpg" loading="lazy" alt="Zdjęcie z projektu"
                             class="project__image">
                     </div>
                     <div class="project__title">Tytuł edfvergv erv er erv</div>
@@ -135,7 +135,7 @@
             </div>
             <div class="project__wrapper">
                 <div class="project">
-                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu"
+                    <div class="project__imgage-wrapper"><img src="./img/test5.jpg" loading="lazy" alt="Zdjęcie z projektu"
                             class="project__image">
                     </div>
                     <div class="project__title">Tytuł edfvergv erv er erv</div>
@@ -153,108 +153,8 @@
                             class="project__link-icon-touch">Czytaj więcej o projekcie</a>
                 </div>
             </div>
-            <div class="project__wrapper">
-                <div class="project">
-                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu"
-                            class="project__image">
-                    </div>
-                    <div class="project__title">Tytuł edfvergv erv er erv</div>
-                    <div class="project__date">12.03.2020</div>
-                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
-                        laborumLorem ipsum dolor
-                        sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat
-                        nulla pariatur.</div>
-                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
-                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
-                </div>
+
             </div>
-            <div class="project__wrapper">
-                <div class="project">
-                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu"
-                            class="project__image">
-                    </div>
-                    <div class="project__title">Tytuł edfvergv erv er erv</div>
-                    <div class="project__date">12.03.2020</div>
-                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
-                        laborumLorem ipsum dolor
-                        sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat
-                        nulla pariatur.</div>
-                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
-                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
-                </div>
-            </div>
-            <div class="project__wrapper">
-                <div class="project">
-                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu"
-                            class="project__image">
-                    </div>
-                    <div class="project__title">Tytuł edfvergv erv er erv</div>
-                    <div class="project__date">12.03.2020</div>
-                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
-                        laborumLorem ipsum dolor
-                        sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat
-                        nulla pariatur.</div>
-                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
-                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
-                </div>
-            </div>
-            <div class="project__wrapper">
-                <div class="project">
-                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu"
-                            class="project__image">
-                    </div>
-                    <div class="project__title">Tytuł edfvergv erv er erv</div>
-                    <div class="project__date">12.03.2020</div>
-                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
-                        laborumLorem ipsum dolor
-                        sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat
-                        nulla pariatur.</div>
-                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
-                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
-                </div>
-            </div>
-            <div class="project__wrapper">
-                <div class="project">
-                    <div class="project__imgage-wrapper"><img src="./img/test1.jpg" alt="Zdjęcie z projektu"
-                            class="project__image">
-                    </div>
-                    <div class="project__title">Tytuł edfvergv erv er erv</div>
-                    <div class="project__date">12.03.2020</div>
-                    <div class="project__description">proident, sunt in culpa qui officia deserunt mollit anim id est
-                        laborumLorem ipsum dolor
-                        sit amet, consectetur adipiscing elit, sed do eiusmod
-                        tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam, quis nostrud exercitation
-                        ullamco laboris nisi ut aliquip ex ea commodo
-                        consequat. Duis aute irure dolor in reprehenderit
-                        in voluptate velit esse cillum dolore eu fugiat
-                        nulla pariatur.</div>
-                    <a href="#" class="project__link"><img src="./img/iconmonstr-tablet-5.svg" alt=""
-                            class="project__link-icon-touch">Czytaj więcej o projekcie</a>
-                </div>
-            </div>
-            
-            
         </section>
     </main>
 </body>
